# pannello

./: .gitignore  MANIFEST.in  NOTICE  README.md  pyproject.toml
benchmark/: fetch_pc.py  ground_truth.json  run_benchmark.py
pannello/: __init__.py  cli.py  core.py  magi.py  model.py
pannello/kumiko_vendor/: VENDOR.md
pannello/kumiko_vendor/lib/: page.py
tests/: __init__.py  test_cli.py  test_core.py  test_model.py
tools/: update_kumiko.sh
