[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pannello"
version = "0.1.0"
description = "Detect comic panels and write KOReader panel-zoom JSON, using the official kumiko with an optional model fallback."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Marco <marco.piraccini@gmail.com>" }]
keywords = ["comics", "manga", "cbz", "cbr", "panels", "koreader", "kumiko"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "numpy",
    "opencv-python",
    "requests",
]

[project.optional-dependencies]
# Model fallback. NOTE: ultralytics is AGPL-3.0.
model = [
    "torch",
    "torchvision",
    "ultralytics",
    "huggingface_hub",
]

[project.scripts]
pannello = "pannello.cli:main"

[project.urls]
Homepage = "https://github.com/marcopiraccini/pannello"

[tool.setuptools]
packages = ["pannello"]
include-package-data = false

[tool.setuptools.package-data]
pannello = ["kumiko_vendor/**/*.py", "kumiko_vendor/LICENSE", "kumiko_vendor/*.md"]
